added configuration for signing and uploading artifacts to central repository. Also refactored AlfrescoCmisHelper.convert() to use BigDecimal for parsing all numbers, and taking the long or intValue() as needed for integer properties.